Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28328

QGraphicsItem::clearFocus() doesn't clear focus from a FocusScope

    XMLWordPrintable

Details

    Description

      This makes it impossible to remove focus from a QtQuick FocusScope with children using the focus property. In the example below, 'focusScope.focus = false' will do nothing instead of clearing the focus scope's focus and both items active focus.

       
      FocusScope {
          id: focusScope
          focus: true
      
          Item {
              id: item
              focus: true
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andrew.den.exter Andrew den Exter
            andrew.den.exter Andrew den Exter
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes